--- a/FossilDiscoveryLab/src/index.css
+++ b/FossilDiscoveryLab/src/index.css
@@ -174,6 +174,21 @@
     @apply font-inter font-bold text-[16px] leading-[150%];
   }
 
+    /* Font 18px */
+
+    .text-normal-18 {
+      @apply font-inter font-normal text-[18px] leading-[150%];
+    }  
+    .text-medium-18 {
+      @apply font-inter font-medium text-[18px] leading-[150%];
+    }
+    .text-semibold-18 {
+      @apply font-inter font-semibold text-[18px] leading-[150%];
+    }  
+    .text-bold-18 {
+      @apply font-inter font-bold text-[18px] leading-[150%];
+    }
+
   /* Font 21px */
   
   .text-normal-21 {
