--- a/FossilDiscoveryLab/src/index.css
+++ b/FossilDiscoveryLab/src/index.css
@@ -135,6 +135,19 @@
   .padding {
     @apply sm:px-16 px-8 sm:py-24 py-12;
   }
+  .padding-x {
+    @apply sm:px-16 px-8;
+  }
+  .padding-y {
+    @apply sm:py-24 py-12;
+  }
+  .padding-b {
+    @apply sm:pb-24 pb-12;
+  }
+  .padding-t {
+    @apply sm:pt-24 pt-12;
+  }
+
 
   /* Layout */
 
