--- a/FossilDiscoveryLab/src/index.css
+++ b/FossilDiscoveryLab/src/index.css
@@ -88,6 +88,14 @@
   transition: background-color 0.15s ease, color 0.15s ease;
 }
 
+
+
+@media (max-width: 480px) {
+  .custom__button__open {
+   padding: 0.5rem 1.5rem; 
+  }
+}
+
 .custom__button__open:hover {
   background-color: var(--color-secondary); 
   color: white; 
