--- a/FossilDiscoveryLab/src/index.css
+++ b/FossilDiscoveryLab/src/index.css
@@ -26,7 +26,7 @@
   line-height: 24px;
   font-size: 16px;
   border-radius: 6px;
-  height: 100%;
+  height: 41px;
   width: 125px;
   max-width: 125px;
   border: none;
