--- a/FossilDiscoveryLab/src/index.css
+++ b/FossilDiscoveryLab/src/index.css
@@ -134,8 +134,8 @@
 
 @media (max-width: 620px) {
   .custom__button__open {
-    padding: 1rem 2rem; 
-    font-size: 22px;   
+    padding: .6rem 1.7rem; 
+    font-size: 16px;   
   }
 }
 
