--- a/FossilDiscoveryLab/src/index.css
+++ b/FossilDiscoveryLab/src/index.css
@@ -229,6 +229,7 @@
 }
 
 .react-datepicker__day--selected, .react-datepicker__day--in-selecting-range, 
+.react-datepicker__day--keyboard-selected,
 .react-datepicker__day--in-range, .react-datepicker__month-text--selected, 
 .react-datepicker__month-text--in-selecting-range, .react-datepicker__month-text--in-range, 
 .react-datepicker__quarter-text--selected, .react-datepicker__quarter-text--in-selecting-range, 
